{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 67,
  "lineage": "2e30bcbe-0f6d-9203-44df-2bc4907c8d60",
  "resources": [
    {
      "module": "module.complex",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.complex.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/complex-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "complex-ingress",
                "namespace": "development",
                "resource_version": "3166399803",
                "uid": "994ca645-c7a8-4d01-bd9c-c9da203d96a2"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "complexdev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "complex",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "complex-ingress",
            "namespace": "development"
          },
          "dependencies": [
            "module.complex.kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "module": "module.complex",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.complex.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/complex",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "complex"
                },
                "name": "complex",
                "namespace": "development",
                "resource_version": "3166399141",
                "uid": "4313bb80-1b9e-415c-8fc3-28dbc5371882"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.83.98",
                "cluster_ips": [
                  "10.102.83.98"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "complex"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "complex",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.dashboard",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.dashboard.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/dashboard-app-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "dashboard-app-ingress",
                "namespace": "development",
                "resource_version": "3166399824",
                "uid": "3a4f70ed-738f-4af9-b45f-f786abb395c8"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "dashboarddev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "dashboard-app",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "dashboard-app-ingress",
            "namespace": "development"
          },
          "dependencies": [
            "module.dashboard.kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "module": "module.dashboard",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.dashboard.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/dashboard-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "dashboard-app"
                },
                "name": "dashboard-app",
                "namespace": "development",
                "resource_version": "3166399154",
                "uid": "d57ba3b5-740a-4864-a14c-bd7aff7e8cd1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.217.228",
                "cluster_ips": [
                  "10.110.217.228"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "dashboard-app"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "dashboard-app",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.landing",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.landing.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/landingcomplex-app-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "landingcomplex-app-ingress",
                "namespace": "development",
                "resource_version": "3166399738",
                "uid": "275fffe4-b5a4-40f3-873f-3cae1ade2771"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "dev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "landingcomplex-app",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "landingcomplex-app-ingress",
            "namespace": "development"
          },
          "dependencies": [
            "module.landing.kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "module": "module.landing",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.landing.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/landingcomplex-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "landingcomplex-app"
                },
                "name": "landingcomplex-app",
                "namespace": "development",
                "resource_version": "3166399166",
                "uid": "23f7a703-371b-4922-bf0b-8e4f3c6acaec"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.101.168.104",
                "cluster_ips": [
                  "10.101.168.104"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "landingcomplex-app"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "landingcomplex-app",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.userwebsite",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.userwebsite.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/userwebsite-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "userwebsite-app"
                },
                "name": "userwebsite-app",
                "namespace": "development",
                "resource_version": "3166399149",
                "uid": "d7fd661a-1501-4950-a648-db4582eb18ee"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.97.13.116",
                "cluster_ips": [
                  "10.97.13.116"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "userwebsite-app"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "userwebsite-app",
            "namespace": "development"
          }
        }
      ]
    }
  ]
}